# fastapi_boilerplate

./: .dockerignore  .gitignore  README.md  TODO.md  alembic.ini  docker-compose.override.yml.dist  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: combine-prs.yml
app/: main.py
app/common/: views.py
app/models/: __init__.py  tasks.py
app/routes/: __init__.py  common.py  tasks.py
app/task/: models.py  views.py
config/: env.py  routes.py  template.py
database/: engine.py  repository.py  schema.prisma
database/migrations/: env.py
database/migrations/20231019123057_init_database/: migration.sql
database/migrations/versions/: ff5ee1c20357_adds_tasks_table.py
docker/: dockerfile  entrypoint.sh
static/css/: style.css
static/js/: main.js
templates/: base.html
templates/tasks/: home.html
templates/tasks/partials/: macros.html  task-form.html  task-row.html
