[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = ""
authors = ["Vincent Vatelot <vincent.vatelot@ik.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = ">=0.22,<0.25"
jinja2 = "^3.1.2"
fastapi = { extras = ["all"], version = ">=0.95.2,<0.106.0" }
gunicorn = ">=20.1,<22.0"
prisma = ">=0.10,<0.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
