[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "Simple TODO list project using Fastapi, Prisma, HTMX and Bootstrap"
authors = [{name = "Vincent Vatelot", email = "vincent.vatelot@ik.me"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "prisma>=0.15.0",
    "python-multipart>=0.0.20",
]

[tool.ruff]
line-length = 127

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.7",
]
